# teamleader-python-sdk

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  get_tokens.py  mkdocs.yml  pyproject.toml
codegen/: __init__.py  fetch_spec.py  generate.py  generate_docs_endpoints.py  generate_endpoints.py  generate_enums.py  generate_models.py
codegen/spec/: api.yaml
docs/: codegen.md  index.md
docs/api-reference/: auth.md  client.md  exceptions.md  generated-endpoints.md  models.md  resources.md
docs/guides/: django.md  error-handling.md  non-django.md  resources.md
site/: 404.html  index.html  objects.inv
site/api-reference/auth/: index.html
site/api-reference/client/: index.html
site/api-reference/exceptions/: index.html
site/codegen/: index.html
site/search/: search_index.json
teamleader/: __init__.py  auth.py  client.py  constants.py  exceptions.py
teamleader/_generated/: __init__.py  endpoints.py  enums.py  models.py
teamleader/django/: __init__.py  apps.py  middleware.py  models.py  token_store.py
teamleader/models/: __init__.py  common.py  company.py  contact.py  deal.py  invoice.py  quotation.py
teamleader/resources/: __init__.py  base.py  companies.py  contacts.py  deals.py  invoices.py  quotations.py
tests/: conftest.py  settings_test.py  test_auth.py  test_client.py  test_django_apps.py  test_django_token_store.py  test_models.py  test_resources.py  test_teamleader_setup.py
tests/integration/: conftest.py  test_auth.py  test_client.py  test_companies.py  test_contacts.py  test_deals.py  test_invoices.py  test_quotations.py
(+8 files in other folders)
